cambios en insertar crecimientoOfertaData. agregacion de objetos costo, costoMensual, variacionAnual y modificacion del objeto proyecto. cambios en la tabla de la base de datos. cambios en los modulos Costos, CrecimientoOferta y proyecciones

--- a/UCR.Negotium.Domain/UCR.Negotium.Domain.csproj
+++ b/UCR.Negotium.Domain/UCR.Negotium.Domain.csproj
@@ -41,6 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Canton.cs" />
+    <Compile Include="Costo.cs" />
+    <Compile Include="CostoMensual.cs" />
     <Compile Include="CrecimientoOfertaObjetoInteres.cs" />
     <Compile Include="DetalleProyeccionVenta.cs" />
     <Compile Include="Distrito.cs" />
@@ -56,6 +58,7 @@
     <Compile Include="RequerimientoReinversion.cs" />
     <Compile Include="TipoOrganizacion.cs" />
     <Compile Include="UnidadMedida.cs" />
+    <Compile Include="VariacionAnualCosto.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
