--- a/UCR.Negotium.DataAccess/UCR.Negotium.DataAccess.csproj
+++ b/UCR.Negotium.DataAccess/UCR.Negotium.DataAccess.csproj
@@ -46,6 +46,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CantonData.cs" />
+    <Compile Include="CostoData.cs" />
+    <Compile Include="CostoMensualData.cs" />
     <Compile Include="CrecimientoOfertaObjetoInteresData.cs" />
     <Compile Include="DetalleProyeccionVentaData.cs" />
     <Compile Include="DistritoData.cs" />
@@ -61,6 +63,7 @@
     <Compile Include="RequerimientoInversionData.cs" />
     <Compile Include="TipoOrganizacionData.cs" />
     <Compile Include="UnidadMedidaData.cs" />
+    <Compile Include="VariacionAnualCostoData.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\UCR.Negotium.Domain\UCR.Negotium.Domain.csproj">
