--- a/UCR.Negotium.WindowsUI/App.config
+++ b/UCR.Negotium.WindowsUI/App.config
@@ -5,6 +5,6 @@
     </startup>
 
     <connectionStrings>
-      <add name="db" connectionString="Data Source=C:\Users\Christian\Documentos\UNIVERSIDAD\HORAS ASISTENTE\Negotium\Proyecto Negotium\UCR.Negotium\NegotiumDataBase.db;Version=3;New=False;Compress=True;"/>
+      <add name="db" connectionString="Data Source=C:\Users\Christian\Documentos\UNIVERSIDAD UCR\HORAS ASISTENTE\Negotium\Proyecto Negotium\UCR.Negotium\NegotiumDataBase.db;Version=3;New=False;Compress=True;"/>
     </connectionStrings>
 </configuration>
