Add financiamiento, depeciaciones y flujo de caja y sus calculos

--- a/UCR.Negotium.Domain/UCR.Negotium.Domain.csproj
+++ b/UCR.Negotium.Domain/UCR.Negotium.Domain.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Costo.cs" />
     <Compile Include="CostoMensual.cs" />
     <Compile Include="CrecimientoOfertaObjetoInteres.cs" />
+    <Compile Include="Depreciacion.cs" />
     <Compile Include="DetalleProyeccionVenta.cs" />
     <Compile Include="Distrito.cs" />
     <Compile Include="Evaluador.cs" />
