modify seleccionarProyecto method with search textbox and datagridview

--- a/UCR.Negotium.DataAccess/UCR.Negotium.DataAccess.csproj
+++ b/UCR.Negotium.DataAccess/UCR.Negotium.DataAccess.csproj
@@ -75,7 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Data\NegotiumDataBase.db">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
