Resolver problemas de eliminar inversion, editar reinversion (se pegaba). Validacion de numeros de telefono, mensaje de inicio. Unidad de medida agregada. Quitar unidad de medida de objeto de interes y el objeto. Financiamiento interes fijo por defecto

--- a/UCR.Negotium/App.config
+++ b/UCR.Negotium/App.config
@@ -6,4 +6,8 @@
     <connectionStrings>
     <add name="db" connectionString="Data Source={AppDir}\Data\NegotiumDataBase.db; Version=3; Pooling=True; Max Pool Size=100;" />
   </connectionStrings>
+  <!-- Installation -->
+  <appSettings>
+    <add key="Installed" value="True" />
+ </appSettings>
 </configuration>
