--- a/UCR.Negotium.DataAccess/UCR.Negotium.DataAccess.csproj
+++ b/UCR.Negotium.DataAccess/UCR.Negotium.DataAccess.csproj
@@ -30,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -45,7 +46,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseData.cs" />
     <Compile Include="CantonData.cs" />
     <Compile Include="CostoData.cs" />
     <Compile Include="CostoMensualData.cs" />
@@ -55,7 +55,6 @@
     <Compile Include="EncargadoData.cs" />
     <Compile Include="FinanciamientoData.cs" />
     <Compile Include="InteresFinanciamientoData.cs" />
-    <Compile Include="ObjetoInteresData.cs" />
     <Compile Include="OrganizacionProponenteData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProponenteData.cs" />
