--- a/UCR.Negotium/UCR.Negotium.csproj
+++ b/UCR.Negotium/UCR.Negotium.csproj
@@ -14,6 +14,23 @@
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <PublishUrl>C:\Users\Christian\Desktop\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <AutorunEnabled>true</AutorunEnabled>
+    <ApplicationRevision>1</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <PublishWizardCompleted>true</PublishWizardCompleted>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -34,6 +51,18 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ManifestCertificateThumbprint>47BE95264B0DEC7D0A397DB5EE04E971842232A5</ManifestCertificateThumbprint>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ManifestKeyFile>UCR.Negotium_TemporaryKey.pfx</ManifestKeyFile>
+  </PropertyGroup>
+  <PropertyGroup>
+    <GenerateManifests>true</GenerateManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignManifests>true</SignManifests>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="MahApps.Metro, Version=1.4.3.0, Culture=neutral, PublicKeyToken=f4fb5a3c4d1e5b4f, processorArchitecture=MSIL">
       <HintPath>..\packages\MahApps.Metro.1.4.3\lib\net45\MahApps.Metro.dll</HintPath>
@@ -43,6 +72,7 @@
       <HintPath>..\packages\MahApps.Metro.IconPacks.1.7.1\lib\net45\MahApps.Metro.IconPacks.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Select.HtmlToPdf, Version=17.1.0.0, Culture=neutral, PublicKeyToken=e0ae9f6e27a97018, processorArchitecture=MSIL">
       <HintPath>..\packages\Select.HtmlToPdf.17.1.0\lib\net40\Select.HtmlToPdf.dll</HintPath>
       <Private>True</Private>
@@ -69,10 +99,20 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="AnalisisAmbientalWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="AnalisisAmbientalWindow.xaml.cs">
+      <DependentUpon>AnalisisAmbientalWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Dialogs\IndicadoresFinales.xaml.cs">
+      <DependentUpon>IndicadoresFinales.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Dialogs\PoseeEncargadoConfirm.xaml.cs">
       <DependentUpon>PoseeEncargadoConfirm.xaml</DependentUpon>
     </Compile>
@@ -91,14 +131,14 @@
     <Compile Include="Dialogs\RegistrarReinversion.xaml.cs">
       <DependentUpon>RegistrarReinversion.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Dialogs\RegistrarTasaInteresFijo.xaml.cs">
+      <DependentUpon>RegistrarTasaInteresFijo.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Dialogs\RegistrarTasaInteresFinanciamiento.xaml.cs">
       <DependentUpon>RegistrarTasaInteresFinanciamiento.xaml</DependentUpon>
     </Compile>
     <Compile Include="Dialogs\RegistrarVariacionAnualCostos.xaml.cs">
       <DependentUpon>RegistrarVariacionAnualCostos.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Dialogs\SeleccionarEncargado.xaml.cs">
-      <DependentUpon>SeleccionarEncargado.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserControls\ProgresoProyecto.xaml.cs">
       <DependentUpon>ProgresoProyecto.xaml</DependentUpon>
@@ -142,6 +182,10 @@
     <Compile Include="Utils\DatatableBuilder.cs" />
     <Compile Include="Utils\GenerarReporte.cs" />
     <Compile Include="Utils\Installation.cs" />
+    <Page Include="Dialogs\IndicadoresFinales.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Dialogs\PoseeEncargadoConfirm.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -166,15 +210,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Dialogs\RegistrarTasaInteresFijo.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Dialogs\RegistrarTasaInteresFinanciamiento.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Dialogs\RegistrarVariacionAnualCostos.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Dialogs\SeleccionarEncargado.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -265,9 +309,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="Data\NegotiumDataBase.db">
+    <Content Include="Data\NegotiumDataBase.db">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    </Content>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -275,6 +319,7 @@
     </None>
     <AppDesigner Include="Properties\" />
     <None Include="Report\font-awesome\fonts\fontawesome-webfont.eot" />
+    <None Include="UCR.Negotium_TemporaryKey.pfx" />
     <Resource Include="Report\font-awesome\fonts\fontawesome-webfont.ttf" />
     <None Include="Report\font-awesome\fonts\fontawesome-webfont.woff" />
     <Resource Include="Report\font-awesome\fonts\FontAwesome.otf" />
@@ -310,7 +355,9 @@
     <None Include="Report\fonts\glyphicons-halflings-regular.woff2" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\UCR.Negotium.DataAccess\UCR.Negotium.DataAccess.csproj">
@@ -341,7 +388,18 @@
     <Content Include="Report\js\plugins\flot\jquery.flot.tooltip.min.js" />
     <Content Include="Report\template.html" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.5.2 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
