--- a/UCR.Negotium.Base/UCR.Negotium.Base.csproj
+++ b/UCR.Negotium.Base/UCR.Negotium.Base.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{37573984-06BA-43F0-8AAC-0D8CAAA97867}</ProjectGuid>
+    <ProjectGuid>{3DD443A4-EBEC-4AFC-9870-C8DD79CD20D7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UCR.Negotium.Domain</RootNamespace>
-    <AssemblyName>UCR.Negotium.Domain</AssemblyName>
+    <RootNamespace>UCR.Negotium.Base</RootNamespace>
+    <AssemblyName>UCR.Negotium.Base</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,35 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AnalisisAmbiental\FactorAmbiental.cs" />
-    <Compile Include="Canton.cs" />
-    <Compile Include="Costo.cs" />
-    <Compile Include="CostoMensual.cs" />
-    <Compile Include="CrecimientoOfertaObjetoInteres.cs" />
-    <Compile Include="Depreciacion.cs" />
-    <Compile Include="DetalleProyeccionVenta.cs" />
-    <Compile Include="Distrito.cs" />
-    <Compile Include="Encargado.cs" />
-    <Compile Include="Financiamiento.cs" />
-    <Compile Include="InteresFinanciamiento.cs" />
-    <Compile Include="ObjetoInteresProyecto.cs" />
-    <Compile Include="OrganizacionProponente.cs" />
-    <Compile Include="Proponente.cs" />
-    <Compile Include="Provincia.cs" />
-    <Compile Include="ProyeccionVentaArticulo.cs" />
-    <Compile Include="Proyecto.cs" />
+    <Compile Include="Enums\Enums.cs" />
+    <Compile Include="Enums\EnumsHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RequerimientoInversion.cs" />
-    <Compile Include="RequerimientoReinversion.cs" />
-    <Compile Include="TipoOrganizacion.cs" />
-    <Compile Include="UnidadMedida.cs" />
-    <Compile Include="VariacionAnualCosto.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\UCR.Negotium.Base\UCR.Negotium.Base.csproj">
-      <Project>{3dd443a4-ebec-4afc-9870-c8dd79cd20d7}</Project>
-      <Name>UCR.Negotium.Base</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
