--- a/UCR.Negotium.DataAccess/UCR.Negotium.DataAccess.csproj
+++ b/UCR.Negotium.DataAccess/UCR.Negotium.DataAccess.csproj
@@ -77,6 +77,7 @@
     <Compile Include="ProyectoData.cs" />
     <Compile Include="ReinversionData.cs" />
     <Compile Include="InversionData.cs" />
+    <Compile Include="TipoMonedaData.cs" />
     <Compile Include="TipoOrganizacionData.cs" />
     <Compile Include="TipoProyectoData.cs" />
     <Compile Include="UnidadMedidaData.cs" />
