--- a/UCR.Negotium.Domain/UCR.Negotium.Domain.csproj
+++ b/UCR.Negotium.Domain/UCR.Negotium.Domain.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Inversion.cs" />
     <Compile Include="Reinversion.cs" />
+    <Compile Include="TipoMoneda.cs" />
     <Compile Include="TipoOrganizacion.cs" />
     <Compile Include="TipoProyecto.cs" />
     <Compile Include="UnidadMedida.cs" />
