--- a/UCR.Negotium/App.config
+++ b/UCR.Negotium/App.config
@@ -4,22 +4,9 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>
-    <add name="db" connectionString="Data Source={AppDir}\Data\NegotiumDataBase.db; Version=3; Pooling=True; Max Pool Size=100;" />
+    <add name="db" connectionString="Data Source={AppDir}\Data\NegotiumDatabase.db; Version=3; Pooling=True; Max Pool Size=100;" />
   </connectionStrings>
-  <!-- Installation -->
   <appSettings>
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="versionDb" value="1.0.0.0" />
   </appSettings>
-  <system.web>
-    <membership defaultProvider="ClientAuthenticationMembershipProvider">
-      <providers>
-        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
-      </providers>
-    </membership>
-    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
-      <providers>
-        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
-      </providers>
-    </roleManager>
-  </system.web>
 </configuration>
