--- a/UCR.Negotium/packages.config
+++ b/UCR.Negotium/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="MahApps.Metro" version="1.4.3" targetFramework="net452" />
   <package id="MahApps.Metro.IconPacks" version="1.7.1" targetFramework="net452" />
+  <package id="Negotium.Core" version="1.0.0" targetFramework="net452" />
+  <package id="NReco.PdfGenerator" version="1.1.15" targetFramework="net452" />
   <package id="Select.HtmlToPdf" version="17.1.0" targetFramework="net452" />
 </packages>
